--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 	<meta property="og:title" content="Home | Graham Dunne" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://www.grahamdunnemusic.com" />
-	<meta property="og:image" content="http://www.grahamdunnemusic.com/images/Graham_Godin.jpg" />
+	<meta property="og:image" content="http://www.grahamdunnemusic.com/css/images/Graham_Godin.jpg" />
 	<meta property="fb:app_id" content="1498139396870513"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/myStyle.css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
