--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class='container'>
 
 		    <div class="navbar-header">
-		    	<a class="navbar-brand" href="/index.html">Graham Dunne</a>
+		    	<a class="navbar-brand" href="/">Graham Dunne</a>
 		    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
 	   	   			<span class="icon-bar"></span>
           			<span class="icon-bar"></span>
@@ -72,6 +72,7 @@
         		</button>
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
+                 <li><a href="/templates/home.html">Home</a></li>
 				 <li><a href="/templates/bio.html">About</a></li>
                  <li><a href="/templates/productions.html">Productions</a></li>
                  <li><a href="/templates/compositions.html">Compositions</a></li>
