--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         		</button>
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
-				 <li><a href="/bio.html">About</a></li>
-                 <li><a href="/productions.html">Productions</a></li>
-                 <li><a href="/compositions.html">Compositions</a></li>
-                 <li><a href="/guitar.html">Guitar</a></li>
-                 <li><a href="/transcriptions.html">Transcriptions</a></li>
-                 <li><a href="/contact.html">Contact</a></li>
+				 <li><a href="/bio">About</a></li>
+                 <li><a href="/productions">Productions</a></li>
+                 <li><a href="/compositions">Compositions</a></li>
+                 <li><a href="/guitar">Guitar</a></li>
+                 <li><a href="/transcriptions">Transcriptions</a></li>
+                 <li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
