--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
 	<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
 </div>
 
- <div ng-view>
+ <div 
+
+    ng-view>
  
-    </div>
+</div>
 
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
