--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
         		</button>
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
-				 <li><a href="/bio">About</a></li>
-                 <li><a href="/productions">Productions</a></li>
-                 <li><a href="/compositions">Compositions</a></li>
-                 <li><a href="/guitar">Guitar</a></li>
-                 <li><a href="/transcriptions">Transcriptions</a></li>
-                 <li><a href="/contact">Contact</a></li>
+		    	 <li><a href="templates/home">Home</a></li>
+				 <li><a href="templates/bio">About</a></li>
+                 <li><a href="templates/productions">Productions</a></li>
+                 <li><a href="templates/compositions">Compositions</a></li>
+                 <li><a href="templates/guitar">Guitar</a></li>
+                 <li><a href="templates/transcriptions">Transcriptions</a></li>
+                 <li><a href="templates/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
