--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         		</button>
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
-		    	 <li><a href="templates/home">Home</a></li>
-				 <li><a href="templates/bio">About</a></li>
-                 <li><a href="templates/productions">Productions</a></li>
-                 <li><a href="templates/compositions">Compositions</a></li>
-                 <li><a href="templates/guitar">Guitar</a></li>
-                 <li><a href="templates/transcriptions">Transcriptions</a></li>
-                 <li><a href="templates/contact">Contact</a></li>
+		    	 <li><a href="#templates/home">Home</a></li>
+				 <li><a href="#templates/bio">About</a></li>
+                 <li><a href="#templates/productions">Productions</a></li>
+                 <li><a href="#templates/compositions">Compositions</a></li>
+                 <li><a href="#templates/guitar">Guitar</a></li>
+                 <li><a href="#templates/transcriptions">Transcriptions</a></li>
+                 <li><a href="#templates/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
