--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
 		    	 <li><a href="#">Home</a></li>
-				 <li><a href="#bio">About</a></li>
-                 <li><a href="#productions">Productions</a></li>
+				 <li><a href="#">About</a></li>
+                 <li><a href="#">Productions</a></li>
                  <li><a href="#compositions">Compositions</a></li>
                  <li><a href="#guitar">Guitar</a></li>
                  <li><a href="#transcriptions">Transcriptions</a></li>
