--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
 		    	 <li><a href="#">Home</a></li>
-				 <li><a href="#">About</a></li>
-                 <li><a href="#">Productions</a></li>
+				 <li><a href="#bio">About</a></li>
+                 <li><a href="#productions">Productions</a></li>
                  <li><a href="#compositions">Compositions</a></li>
                  <li><a href="#guitar">Guitar</a></li>
-                 <li><a href="#transcriptions">Transcriptions</a></li>
-                 <li><a href="#contact">Contact</a></li>
+                 <li><a href="#templates/transcriptions">Transcriptions</a></li>
+                 <li><a href="#templates/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
