--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<base href="/"> <!-- needed for Angular HTML 5 mode -->
 	<meta charset="UTF-8">
-	<title>Home | Graham Dunne</title>
+	<title>Music | Graham Dunne</title>
 	<meta property="og:title" content="Home | Graham Dunne" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://www.grahamdunnemusic.com" />
